# Baby_Ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CRITICAL_ANALYSIS_YERKES_DODSON.md  EXECUTIVE_MEMO_YERKES_DODSON.md  NEXT_STEPS_ICDL_PAPER.md  PROJECT_SUMMARY.md  README.md  README_YERKES_DODSON_ANALYSIS.md  ROADMAP.md  SQL_task.md  Task.md  YERKES_DODSON_VERDICT_SUMMARY.md  pyproject.toml  task_baby_brain.md
.baby_memory/: episodic.json  procedural.json  semantic.json  state.json
agents/: __init__.py
common/: __init__.py  config.py
docs/: BRAINVIEW_COLLABORATION_GUIDE.md  COMPETITIVE_SURVEY.md  DB_MIGRATION_PLAN.md  ICDL2025_COMPREHENSIVE_PAPERS.md  ICDL2025_PAPER_ANALYSIS.md  ICDL_2025_PAPER_TRACKER.md  ICDL_2025_SEARCH_CHECKLSIT.txt  ICDL_2025_SEARCH_EXECUTIVE_SUMMARY.md  ICDL_2026_STATUS.md  ICDL_EXECUTIVE_BRIEF.md  ICDL_REVIEWER_ASSESSMENT.md  ICDL_SUBMISSION_ROADMAP.md  ICDL_TRENDS_ANALYSIS_2026.md  ISMAR_2026_STRATEGY.md  ISMAR_GAP_ANALYSIS.md  LIKELY_ICDL_2025_PAPERS_FROM_TRAINING_DATA.md  NEURAL_A2A_ARCHITECTURE.md  PAPER_PLAN.md  PARAMETER_TAXONOMY.md  PHASE_4_4_PHYSICAL_WORLD.md  PHASE_4_5_TOOL_USE.md  PHASE_5_AUTONOMOUS_GOALS.md  PHASE_6_MEMORY_CONSOLIDATION.md  PHASE_7_METACOGNITION.md  PHASE_8_AUTONOMOUS_CURIOSITY.md  PHASE_9_TEXTUAL_BACKPROPAGATION.md  PHASE_A_PROACTIVE_QUESTIONS.md  PROJECT_VISION.md  RAG_COMPARISON_ANALYSIS.md  README_ICDL_2026.md  REALTIME_MULTIMODAL_RESEARCH.md  RELATED_WORK_SURVEY.md  SIM_ARCHITECT_DESIGN.md  UNITY_XR_TECHNICAL_SPEC.md  ablation_analysis_queries.sql
hosts/: __init__.py
neural/: __init__.py  __main__.py  (+5 more)
(+145 files in other folders)
